# ecosystem-test-scripts

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  book.toml  build-docs.sh  config.ini.sample  pyproject.toml
.github/actions/setup-project/: action.yml
.github/workflows/: docs.yml  main-workflow.yml  pr-workflow.yml  production_testrail_metrics_weekly.yml  scheduled_reporter_run.yml  test.yml
docs/: README.md  SUMMARY.md  contributors.md  introduction.md
docs/cli/: README.md  check.md  clean.md  format.md  install.md  run_circleci_scraper.md  run_test_metric_reporter.md  test.md  test_coverage.md  test_coverage_html.md
docs/developer-guides/: cli.md  developer_setup.md
docs/metric-interpretation-guide/: README.md
docs/metric-update-procedure/: README.md
docs/reference-guides/: metric_interpretation_guide.md  metric_update_procedure.md  project_onboarding_procedure.md  testrail_metric_interpretation_guide.md
docs/testing-101/: README.md
scripts/circleci_scraper/: client.py  config.py  error.py  gcs_client.py  main.py  scraper.py
scripts/common/: config.py  error.py
scripts/google_sheet_uploader/: config.py  main.py  uploader.py
scripts/metric_reporter/: averages_reporter.py  base_reporter.py  circleci_json_parser.py  config.py  constants.py  error.py  gcs_client.py  junit_xml_parser.py  main.py  suite_reporter.py
scripts/metric_reporter/parser/: __init__.py  base_parser.py  circleci_json_parser.py  coverage_json_jest_parser.py  coverage_json_parser.py  junit_xml_parser.py
scripts/metric_reporter/reporter/: averages_reporter.py  base_reporter.py  bigquery_client.py  coverage_reporter.py  suite_reporter.py
scripts/report_merger/: config.py  main.py  report_merger.py
scripts/test_metric_reporter/: circleci_json_parser.py  config.py  main.py  suite_reporter.py
tests/circleci_scraper/: test_client.py
tests/metric_reporter/: conftest.py  test_averages_reporter.py  test_circleci_json_parser.py  test_coverage_json_parser.py  test_coverage_reporter.py  test_junit_xml_parser.py  test_suite_reporter.py
tests/metric_reporter/test_data/averages_csv/: averages.csv
tests/metric_reporter/test_data/jest_json_samples/: 1__1725149842__repo__main__suite__coverage.json
tests/metric_reporter/test_data/llvm_cov_json_samples/: 1__1725047810__repo__main__suite__coverage.json
tests/metric_reporter/test_data/pytest_json_samples/: 1__1724953421__repo__main__suite__coverage.json
tests/metric_reporter/test_data/xml_samples_jest/: 1__1720830113__repo__main__suite__failure.xml  1__1720830113__repo__main__suite__success.xml
tests/metric_reporter/test_data/xml_samples_mocha/: 1__1721348311__repo__main__suite__failure.xml
tests/metric_reporter/test_data/xml_samples_playwright/: 1__1721175792__repo__main__suite__skipped.xml
tests/metric_reporter/test_data/xml_samples_pytest/: 1__1720019124__repo__main__suite__error.xml  1__1720019124__repo__main__suite__skipped.xml
tests/test_metric_reporter/: test_suite_reporter.py
tests/test_metric_reporter/test_data/test_metadata_directory_empty_test_results/: empty.json
(+24 files in other folders)
